<resources>
    <string name="app_name">NokariMahamandal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_register_user">Create Account</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="submit_button">Register</string>

</resources>
