<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xhdpi"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterUserActivity"
    tools:showIn="@layout/activity_register_user">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="All fields are required."
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:nextFocusRight="@+id/lastNameEditText"
                    android:imeOptions="actionNext"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:focusable="true"
                    android:inputType="textCapWords"
                    android:hint="@string/hint_first_name"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/textview_border"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:focusable="true"
                    android:hint="@string/hint_last_name"
                    android:inputType="textCapWords"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textview_border"
                android:focusable="true"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/confirmEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/emailEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textview_border"
                android:hint="@string/hint_confirm_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/confirmEmailEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textview_border"
                android:hint="@string/hint_phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/phoneNumberEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textview_border"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:textStyle="normal" />



            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/passwordEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_drawable"
                android:text="@string/submit_button"
                android:textColor="#FFF"
                android:textSize="16sp" />



        </RelativeLayout>
    </ScrollView>



</LinearLayout>
